--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:id="@+id/relative"
+<LinearLayout android:id="@+id/relative"
+              xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
 
     <RelativeLayout
@@ -12,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="90px"
         android:background="@color/menu_black"
-        android:splitMotionEvents="false" >
+        android:splitMotionEvents="false">
 
         <Button
             android:id="@+id/backBtn"
@@ -20,7 +19,7 @@
             android:layout_height="82px"
             android:layout_centerVertical="true"
             android:background="@drawable/back_btn_selector"
-            android:tag="mwar" />
+            android:tag="mwar"/>
 
         <TextView
             android:id="@+id/title"
@@ -30,87 +29,324 @@
             android:gravity="center"
             android:text="@string/earnings"
             android:textColor="@color/white"
-            android:textSize="48px" />
+            android:textSize="48px"/>
     </RelativeLayout>
 
-
-    <RelativeLayout
-        android:id="@+id/relativeLayoutPayout"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28px"
-        android:layout_marginLeft="24px">
+        android:layout_height="match_parent"
+        >
 
-        <TextView
-            android:id="@+id/textViewEstPayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/estimated_payout"
-            android:textSize="36px"/>
-
-        <TextView
-            android:id="@+id/textViewThisWeek"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textViewEstPayout"
-            android:text="@string/this_week_cap"
-            android:textSize="28px"/>
-
-        <ImageView
-            android:layout_width="32px"
-            android:layout_height="32px"
-            android:layout_marginRight="24px"
-            android:layout_centerVertical="true"
-            android:src="@drawable/arrow_icon_normal"
-            android:layout_alignParentRight="true"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/relativelayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="24px">
-
-        <com.github.mikephil.charting.charts.BarChart
-            android:id="@+id/chart"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="400px" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28px">
-
-        <ImageView
-            android:id="@+id/imageViewPrev"
-            android:layout_width="32px"
-            android:layout_height="32px"
-            android:layout_marginLeft="24px"
-            android:layout_centerVertical="true"
-            android:rotation="180"
-            android:src="@drawable/arrow_icon_normal"/>
-
-        <TextView
-            android:id="@+id/textViewInvPeriod"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="@string/this_week_cap"
-            android:textSize="28px"/>
+            android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageViewNext"
-            android:layout_width="32px"
-            android:layout_height="32px"
-            android:layout_marginRight="24px"
-            android:layout_centerVertical="true"
-            android:src="@drawable/arrow_icon_normal"
-            android:layout_alignParentRight="true"/>
 
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/relativeLayoutPayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24px"
+                android:layout_marginTop="28px">
 
+                <TextView
+                    android:id="@+id/textViewEstPayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/estimated_payout"
+                    android:textSize="36px"/>
+
+                <TextView
+                    android:id="@+id/textViewThisWeek"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textViewEstPayout"
+                    android:text="@string/this_week_cap"
+                    android:textSize="28px"/>
+
+                <TextView
+                    android:id="@+id/textViewPayOutValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="18px"
+                    android:layout_toLeftOf="@+id/arrow"
+                    android:text="Rs. NA"
+                    android:textSize="42px"/>
+
+                <ImageView
+                    android:id="@+id/arrow"
+                    android:layout_width="32px"
+                    android:layout_height="32px"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="24px"
+                    android:src="@drawable/arrow_icon_normal"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/relativelayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="24px">
+
+                <com.github.mikephil.charting.charts.BarChart
+                    android:id="@+id/chart"
+                    android:layout_width="match_parent"
+                    android:layout_height="400px"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="28px">
+
+                <ImageView
+                    android:id="@+id/imageViewPrev"
+                    android:layout_width="32px"
+                    android:layout_height="32px"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="24px"
+                    android:rotation="180"
+                    android:src="@drawable/arrow_icon_normal"/>
+
+                <TextView
+                    android:id="@+id/textViewInvPeriod"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/this_week_cap"
+                    android:textSize="32px"/>
+
+                <ImageView
+                    android:id="@+id/imageViewNext"
+                    android:layout_width="32px"
+                    android:layout_height="32px"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="24px"
+                    android:src="@drawable/arrow_icon_normal"/>
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="680px"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="24px"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="2px"
+                    android:layout_marginBottom="36px"
+                    android:background="@color/grey_dark_less"/>
+
+
+                <RelativeLayout
+                    android:id="@+id/relativeLayout1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/textViewDayDateVal1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="12px"
+                        android:text="day, date"
+                        android:textSize="32px"/>
+
+                    <TextView
+                        android:id="@+id/textViewDailyValue1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="18px"
+                        android:layout_toLeftOf="@+id/arrow1"
+                        android:text="Rs. NA"
+                        android:textSize="32px"/>
+
+                    <ImageView
+                        android:id="@+id/arrow1"
+                        android:layout_width="32px"
+                        android:layout_height="32px"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="4px"
+                        android:src="@drawable/arrow_icon_normal"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/relativeLayout2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24px">
+
+                    <TextView
+                        android:id="@+id/textViewDayDateVal2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="12px"
+                        android:text="day, date"
+                        android:textSize="32px"/>
+
+                    <TextView
+                        android:id="@+id/textViewDailyValue2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="18px"
+                        android:layout_toLeftOf="@+id/arrow2"
+                        android:text="Rs. NA"
+                        android:textSize="32px"/>
+
+                    <ImageView
+                        android:id="@+id/arrow2"
+                        android:layout_width="32px"
+                        android:layout_height="32px"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="4px"
+                        android:src="@drawable/arrow_icon_normal"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/relativeLayout3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24px">
+
+                    <TextView
+                        android:id="@+id/textViewDayDateVal3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="12px"
+                        android:text="day, date"
+                        android:textSize="32px"/>
+
+                    <TextView
+                        android:id="@+id/textViewDailyValue3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="18px"
+                        android:layout_toLeftOf="@+id/arrow3"
+                        android:text="Rs. NA"
+                        android:textSize="32px"/>
+
+                    <ImageView
+                        android:id="@+id/arrow3"
+                        android:layout_width="32px"
+                        android:layout_height="32px"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="4px"
+                        android:src="@drawable/arrow_icon_normal"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/relativeLayout4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24px">
+
+                    <TextView
+                        android:id="@+id/textViewDayDateVal4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="12px"
+                        android:text="day, date"
+                        android:textSize="32px"/>
+
+                    <TextView
+                        android:id="@+id/textViewDailyValue4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="18px"
+                        android:layout_toLeftOf="@+id/arrow4"
+                        android:text="Rs. NA"
+                        android:textSize="32px"/>
+
+                    <ImageView
+                        android:id="@+id/arrow4"
+                        android:layout_width="32px"
+                        android:layout_height="32px"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="4px"
+                        android:src="@drawable/arrow_icon_normal"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/relativeLayout5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24px"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:id="@+id/textViewDayDateVal5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="12px"
+                        android:text="day, date"
+                        android:textSize="32px"/>
+
+                    <TextView
+                        android:id="@+id/textViewDailyValue5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="18px"
+                        android:layout_toLeftOf="@+id/arrow5"
+                        android:text="Rs. NA"
+                        android:textSize="32px"/>
+
+                    <ImageView
+                        android:id="@+id/arrow5"
+                        android:layout_width="32px"
+                        android:layout_height="32px"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="4px"
+                        android:src="@drawable/arrow_icon_normal"/>
+
+                </RelativeLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="2px"
+                    android:layout_marginBottom="36px"
+                    android:layout_marginTop="36px"
+                    android:background="@color/grey_dark_less"/>
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/relativeLayoutRideHistory"
+                android:layout_width="680px"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="44px"
+                android:layout_marginTop="24px">
+
+                <TextView
+                    android:id="@+id/textViewRideHistory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12px"
+                    android:text="@string/ride_history_cap"
+                    android:textSize="32px"/>
+
+
+                <ImageView
+                    android:layout_width="32px"
+                    android:layout_height="32px"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="4px"
+                    android:src="@drawable/arrow_icon_normal"/>
+
+            </RelativeLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
