--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -175,7 +175,7 @@
                     android:id="@+id/relativeLayout1"
                     android:layout_width="match_parent"
                     android:layout_height="84px"
-                    android:background="@drawable/list_white_selector"
+                    android:background="@drawable/list_transparent_selector"
                     android:gravity="center_vertical">
 
                     <TextView
@@ -187,24 +187,33 @@
                         android:textColor="@color/grey_black_v2"
                         android:textSize="32px"/>
 
-                    <TextView
-                        android:id="@+id/textViewDailyValue1"
+                    <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="18px"
-                        android:layout_toLeftOf="@+id/arrow1"
-                        android:text="Rs. NA"
-                        android:textColor="@color/grey_black_v2"
-                        android:textSize="32px"/>
-
-                    <ImageView
-                        android:id="@+id/arrow1"
-                        android:layout_width="23px"
-                        android:layout_height="21px"
-                        android:layout_marginTop="8px"
                         android:layout_alignParentRight="true"
-                        android:layout_marginRight="36px"
-                        android:src="@drawable/arrow_thick_new"/>
+                        android:layout_marginRight="36px">
+
+                        <TextView
+                            android:id="@+id/textViewDailyValue1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="18px"
+                            android:layout_toLeftOf="@+id/arrow1"
+                            android:text="Rs. NA"
+                            android:textColor="@color/grey_black_v2"
+                            android:textSize="32px"/>
+
+                        <ImageView
+                            android:id="@+id/arrow1"
+                            android:layout_width="23px"
+                            android:layout_height="21px"
+                            android:layout_marginTop="8px"
+                            android:layout_alignParentRight="true"
+                            android:src="@drawable/arrow_thick_new"/>
+
+                    </RelativeLayout>
+
+
 
                 </RelativeLayout>
 
@@ -213,7 +222,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="84px"
                     android:gravity="center_vertical"
-                    android:background="@drawable/list_white_selector">
+                    android:background="@drawable/list_transparent_selector">
 
                     <TextView
                         android:id="@+id/textViewDayDateVal2"
@@ -250,7 +259,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="84px"
                     android:gravity="center_vertical"
-                    android:background="@drawable/list_white_selector">
+                    android:background="@drawable/list_transparent_selector">
 
                     <TextView
                         android:id="@+id/textViewDayDateVal3"
@@ -288,7 +297,7 @@
                     android:layout_height="84px"
                     android:visibility="gone"
                     android:gravity="center_vertical"
-                    android:background="@drawable/list_white_selector">
+                    android:background="@drawable/list_transparent_selector">
 
                     <TextView
                         android:id="@+id/textViewDayDateVal4"
@@ -325,7 +334,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="84px"
                     android:gravity="center_vertical"
-                    android:background="@drawable/list_white_selector"
+                    android:background="@drawable/list_transparent_selector"
                     android:visibility="gone">
 
                     <TextView
@@ -372,7 +381,7 @@
                 android:layout_width="680px"
                 android:layout_height="84px"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/list_white_selector"
+                android:background="@drawable/list_transparent_selector"
                 android:gravity="center_vertical"
                 android:layout_marginBottom="44px">
 
