--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -6,7 +6,9 @@
     android:layout_height="1134px"
     android:background="@drawable/splash_new_background"
     android:orientation="vertical"
-    android:splitMotionEvents="false">
+    android:splitMotionEvents="false"
+    android:animateLayoutChanges="true"
+    >
 
     <RelativeLayout
         android:id="@+id/selectLanguageLl"
@@ -18,7 +20,6 @@
         android:layout_marginTop="25px"
         android:background="@drawable/background_translucent_white_rounded_orange_bordered"
         android:visibility="visible">
-
 
         <ImageView
             android:layout_width="wrap_content"
@@ -35,7 +36,6 @@
             android:visibility="gone"
             android:background="@color/new_orange"/>
 
-
         <Spinner
             android:id="@+id/language_spinner"
             android:layout_width="match_parent"
@@ -45,7 +45,6 @@
             android:popupBackground="@drawable/background_white_rounded_orange_bordered"
             android:textAlignment="center"/>
 
-
         <ImageView
             android:layout_width="30px"
             android:layout_height="22px"
@@ -54,16 +53,27 @@
             android:layout_alignParentRight="true"
             android:background="@drawable/white_arrow_down"/>
 
-
-
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/viewInitJugnoo"
+        android:layout_width="match_parent"
+        android:layout_height="140px"
+        android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/viewInitSplashJugnoo"
+        android:layout_width="match_parent"
+        android:layout_height="200px"
+        android:visibility="gone" />
 
 
     <RelativeLayout
+        android:id="@+id/relativeLayoutJugnooLogo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:splitMotionEvents="false"
-        >
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100px"
+        android:splitMotionEvents="false">
 
         <ImageView
             android:id="@+id/imageViewJugnooLogo"
@@ -71,7 +81,6 @@
             android:layout_height="270px"
             android:layout_centerHorizontal="true"
             android:background="@drawable/jugnoo_white_logo"
-            android:layout_marginTop="100px"
             android:tag="mwar"
             android:visibility="visible" />
 
@@ -80,7 +89,7 @@
             android:layout_width="390px"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="240px"
+            android:layout_marginTop="140px"
             android:tag="mwar">
 
             <ImageView
@@ -98,153 +107,133 @@
 
         </RelativeLayout>
 
-        <ProgressBar
-            android:id="@+id/progressBar1"
-            android:layout_width="100px"
-            android:layout_height="100px"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="760px"
-            />
+        <!--<ProgressBar-->
+            <!--android:id="@+id/progressBar1"-->
+            <!--android:layout_width="100px"-->
+            <!--android:layout_height="100px"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_marginTop="760px"-->
+            <!--/>-->
+
+    </RelativeLayout>
+
+
+    <ImageView
+        android:id="@+id/viewInitLS"
+        android:layout_width="match_parent"
+        android:layout_height="300px"
+        android:visibility="gone" />
+
+
+    <RelativeLayout
+        android:id="@+id/relativeLayoutLS"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="210px"
+        android:animateLayoutChanges="true"
+        android:visibility="visible">
 
         <LinearLayout
-            android:id="@+id/linearLayoutSignUpIn"
+            android:id="@+id/linearLayoutLoginSignupButtons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="117px"
+            android:gravity="center_horizontal"
             android:orientation="vertical"
+            android:splitMotionEvents="false"
             android:visibility="visible">
 
             <Button
                 android:id="@+id/buttonLogin"
+                android:layout_width="473px"
+                android:layout_height="100px"
+                android:background="@drawable/button_white_selector"
                 android:text="@string/login"
-                android:layout_width="636px"
-                android:layout_height="112px"
-                android:background="@drawable/background_white_rounded_bordered"
-                android:textColor="@color/new_orange"
-                android:textSize="@dimen/button_text_size"/>
+                android:textAllCaps="true"
+                android:textColor="@color/red_v2"
+                android:textSize="@dimen/text_size_34" />
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="54px"
+                android:layout_marginTop="32px"
+                android:layout_marginBottom="32px"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="200px"
+                    android:layout_height="2px"
+                    android:id="@+id/imageViewHorizontal3"
+                    android:layout_centerVertical="true"
+                    android:background="@color/grey_light"/>
+
+                <TextView
+                    android:id="@+id/textViewName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_toRightOf="@+id/imageViewHorizontal3"
+                    android:paddingLeft="10px"
+                    android:paddingRight="10px"
+                    android:text="@string/or"
+                    android:textColor="@color/white"
+                    android:textSize="30px"/>
+
+                <ImageView
+                    android:layout_width="200px"
+                    android:layout_height="2px"
+                    android:id="@+id/imageViewHorizontal4"
+                    android:layout_toRightOf="@+id/textViewName"
+                    android:layout_centerVertical="true"
+                    android:background="@color/grey_light"/>
+
+            </RelativeLayout>
+
+
 
             <Button
                 android:id="@+id/buttonRegister"
+                android:layout_width="473px"
+                android:layout_height="100px"
+                android:background="@drawable/button_theme_alpha_white_stroke_selector"
                 android:text="@string/register"
-                android:textColor="@color/new_orange"
-                android:layout_width="636px"
-                android:layout_height="112px"
-                android:layout_marginTop="24px"
-                android:background="@drawable/background_white_rounded_bordered"
-                android:textSize="@dimen/button_text_size"
-                android:visibility="visible"
-                />
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_34" />
 
             <Button
                 android:id="@+id/buttonRegisterTookan"
                 android:text="@string/register_via_agent"
-                android:textColor="@color/new_orange"
-                android:layout_width="636px"
-                android:layout_height="112px"
+                android:textColor="@color/white"
+                android:layout_width="473px"
+                android:layout_height="100px"
+                android:background="@drawable/button_theme_alpha_white_stroke_selector"
                 android:layout_marginTop="24px"
-                android:background="@drawable/background_white_rounded_bordered"
-                android:textSize="@dimen/button_text_size"
+                android:textSize="@dimen/text_size_34"
                 android:visibility="gone"
                 />
 
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayoutAutoDriverConfirmation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:gravity="center_horizontal"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="117px"
-            android:visibility="gone"
-            android:orientation="vertical">
-
             <TextView
-                android:id="@+id/textViewConfirmationText"
+                android:id="@+id/textViewTerms"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/auto_driver_confirmation"
-                android:textSize="44px"
-                android:textColor="@color/white"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="120px"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/buttonConfirmationYes"
-                    android:layout_width="280px"
-                    android:layout_height="90px"
-                    android:text="@string/yes"
-                    android:textColor="@color/new_orange"
-                    android:background="@drawable/background_white_rounded_orange_bordered"/>
-
-                <Button
-                    android:id="@+id/buttonConfirmationNo"
-                    android:layout_width="280px"
-                    android:layout_height="90px"
-                    android:layout_marginLeft="48px"
-                    android:text="@string/no"
-                    android:textColor="@color/new_orange"
-                    android:background="@drawable/background_white_rounded_orange_bordered"/>
-
-            </LinearLayout>
+                android:layout_marginTop="60px"
+                android:text=""
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_26" />
 
         </LinearLayout>
 
-
-        <LinearLayout
-            android:id="@+id/linearLayoutAutoStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:gravity="center_horizontal"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="117px"
-            android:visibility="gone"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textViewStatusText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/auto_status_confirmation"
-                android:textSize="44px"
-                android:textColor="@color/white"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="120px"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/buttonStatusYes"
-                    android:layout_width="280px"
-                    android:layout_height="90px"
-                    android:text="@string/yes"
-                    android:textColor="@color/new_orange"
-                    android:background="@drawable/background_white_rounded_orange_bordered"/>
-
-                <Button
-                    android:id="@+id/buttonStatusNo"
-                    android:layout_width="280px"
-                    android:layout_height="90px"
-                    android:layout_marginLeft="48px"
-                    android:text="@string/no"
-                    android:textColor="@color/new_orange"
-                    android:background="@drawable/background_white_rounded_orange_bordered"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
 
     </RelativeLayout>
+
+
+    <!-- login buttons -->
+    <include layout="@layout/layout_login" />
+
+
+    <include layout="@layout/layout_splash_signup" />
 
 </LinearLayout>
