--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_chat.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_chat.xml
@@ -26,7 +26,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/topBar"
-        android:layout_above="@+id/rlInput"/>
+        android:layout_above="@+id/recyclerViewChatOptions"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewChatOptions"
+        android:layout_width="match_parent"
+        android:layout_above="@+id/rlInput"
+        android:layout_height="95px"
+        android:splitMotionEvents="false"
+        android:visibility="visible"
+        />
 
     <ImageView
         android:layout_width="match_parent"
@@ -39,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/sliding_bottom_bg_color"
+        android:background="@color/white"
         android:padding="20px">
 
         <EditText
@@ -47,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="80px"
             android:layout_toLeftOf="@+id/action_send"
-            android:background="@drawable/background_white_rounded_bordered"
+            android:background="@color/white"
             android:hint="Type your message here"
             android:layout_centerVertical="true"
             android:maxHeight="96px"
@@ -58,15 +67,16 @@
 
         <ImageView
             android:id="@+id/action_send"
-            android:layout_width="80px"
-            android:layout_height="80px"
+            android:layout_width="59px"
+            android:layout_height="59px"
             android:layout_marginLeft="20px"
             android:layout_marginRight="10px"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
+            android:padding="10px"
             android:tag="mwar"
             android:background="@android:color/transparent"
-            android:src="@drawable/chat_send" />
+            android:src="@drawable/ic_send_msg" />
     </RelativeLayout>
 
 </RelativeLayout>
