--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_help.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_help.xml
@@ -4,7 +4,7 @@
     android:layout_width="720px"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/list_white_selector"
+    android:background="@drawable/white_bg"
         android:splitMotionEvents="false"
      >
 
